--- a/server/views/pages/offence/offence-name.njk
+++ b/server/views/pages/offence/offence-name.njk
@@ -20,6 +20,7 @@
                     },
                     id: "offence-name",
                     name: "offenceName",
+                    errorMessage:  errors | findError('offenceName'),
                     items: []
                 })}}
                 
@@ -34,5 +35,5 @@
 
 {% block javascripts %}
     <script src="/assets/accessible-autocomplete.min.js"></script>
-    <script id="autocomplete-script" src="/assets/js/autoCompleteOffenceName.js"></script>
+    <script id="autocomplete-script" src="/assets/js/autoCompleteOffenceName.js" data-offence="{{ offenceNameForm.offenceName if offenceNameForm.offenceName else ''}}"></script>
 {% endblock %}
