--- a/server/views/pages/offence/delete-offence.njk
+++ b/server/views/pages/offence/delete-offence.njk
@@ -24,7 +24,8 @@
             custodialSentenceLength: offence.sentence.custodialSentenceLength,
             licencePeriodLength: offence.sentence.licencePeriodLength,
             sentenceServeType: offence.sentence.sentenceServeType,
-            consecutiveTo: offence.sentence.consecutiveTo
+            consecutiveTo: offence.sentence.consecutiveTo,
+            sentenceType: offence.sentence.sentenceType
         })
     }}
 {% endset %}
