--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -153,7 +153,8 @@
                                     countNumber: offence.sentence.countNumber,
                                     terrorRelated: offence.terrorRelated,
                                     isSentenced: offence.sentence,
-                                    custodialSentenceLength: offence.sentence.custodialSentenceLength
+                                    custodialSentenceLength: offence.sentence.custodialSentenceLength,
+                                    sentenceType: offence.sentence.sentenceType
                                 })
                             }}
                 {% endfor %}
