--- a/server/views/pages/courtAppearance/select-reference.njk
+++ b/server/views/pages/courtAppearance/select-reference.njk
@@ -1,34 +1,38 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {% set pageTitle = applicationName + " - Same case reference number page" %}
 {% block content %}
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-select-reference{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                <span class="govuk-caption-l">Add an appearance to court case {{ courtCaseUniqueIdentifier }}</span>
+                <span class="govuk-caption-l">Add appearance information</span>
                 {{ govukRadios({
                     name: "referenceNumberSelect",
+                    errorMessage: errors | findError('referenceNumberSelect'),
                     fieldset: {
                         legend: {
-                        text: "Did this appearance use the same case reference number?",
+                        text: "Is the case reference " + lastCaseReferenceNumber + "?",
                         isPageHeading: true,
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
                     hint: {
-                        text: lastCaseReferenceNumber
+                        text: "This is the case reference used in the previous appearance."
                     },
                     items: [
                         {
                             value: "true",
-                            text: "Yes"
+                            text: "Yes",
+                            checked: referenceForm.referenceNumberSelect === 'true'
                         },
                         {
                             value: "false",
-                            text: "No"
+                            text: "No",
+                            checked: referenceForm.referenceNumberSelect === 'false'
                         }
                     ]
                 }) }}
