updated location to court name

--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -43,7 +43,7 @@
                         },
                         {
                             key: {
-                            text: "Location"
+                            text: "Court name"
                         },
                             value: {
                             text: appearance.courtName
@@ -99,7 +99,7 @@
     {% set nextHearingSummaryRows = nextHearingSummaryRows.concat([
         {
             key: {
-            text: "Location"
+            text: "Court name"
             },
                 value: {
                 text: appearance.nextHearingCourtName
