refactor select court name

--- a/server/views/pages/courtAppearance/select-court-name.njk
+++ b/server/views/pages/courtAppearance/select-court-name.njk
@@ -27,11 +27,13 @@
                     items: [
                         {
                             value: "true",
-                            text: "Yes"
+                            text: "Yes",
+                            checked: selectCourtNameForm.courtNameSelect === 'true'
                         },
                         {
                             value: "false",
-                            text: "No"
+                            text: "No",
+                            checked: selectCourtNameForm.courtNameSelect === 'false'
                         }
                     ]
                 }) }}
