--- a/server/views/partials/editOffenceDetails.njk
+++ b/server/views/partials/editOffenceDetails.njk
@@ -10,6 +10,7 @@
                         canEdit: true,
                         nomsId: nomsId,
                         addOrEditCourtCase: addOrEditCourtCase,
+                        addOrEditCourtAppearance: addOrEditCourtAppearance,
                         courtCaseReference: courtCaseReference,
                         appearanceReference: appearanceReference,
                         offenceReference: offenceReference
