--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -25,7 +25,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-type?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-type?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "next hearing type"
                                 }
@@ -42,7 +42,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-date?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-date?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "next hearing date"
                                 }
@@ -59,7 +59,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-court-select?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/next-hearing-court-select?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "next hearing location"
                                 }
@@ -69,7 +69,7 @@
                     ]
                 }) }}
 
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-check-next-hearing-answers">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-check-next-hearing-answers">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {{ govukButton({
                     text: "Accept and continue"
