--- a/server/views/pages/courtAppearance/warrant-upload.njk
+++ b/server/views/pages/courtAppearance/warrant-upload.njk
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" enctype="multipart/form-data" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-warrant-upload?_csrf={{ csrfToken }}{{ "&submitToCheckAnswers=true" if submitToCheckAnswers }}">
+            <form method="post" enctype="multipart/form-data" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-warrant-upload?_csrf={{ csrfToken }}{{ "&submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 {% include "../../partials/appearanceCaption.njk" %}
                 {{ govukFileUpload({
                     id: "warrant-upload",
